[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/main_menu_mobile.gd" type="Script" id=1]
[ext_resource path="res://text/dynamic_text.gd" type="Script" id=6]

[node name="MainMenuMobile" type="Node2D"]
script = ExtResource( 1 )

[node name="Title1" type="Node2D" parent="."]
position = Vector2( 640, 100 )
script = ExtResource( 6 )
text = "I MAED A GAM3 W1TH"
size = 12.0
justify = 2
flashing = true
flash_color_min = 0.4

[node name="Title2" type="Node2D" parent="."]
position = Vector2( 640, 200 )
script = ExtResource( 6 )
text = "Z0MBIES 1N IT!!!1"
size = 12.0
justify = 2
flashing = true
flash_color_min = 0.4

[node name="Subtitle" type="Node2D" parent="."]
position = Vector2( 640, 300 )
script = ExtResource( 6 )
text = "(IT'S A TW1N ST1CK SH00T3R)"
size = 6.0
justify = 2
flashing = true
flash_color_min = 0.4

[node name="StartGame" type="Node2D" parent="."]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 500, 550 )
script = ExtResource( 6 )
text = "start game"
size = 6.0
justify = 2

[node name="QuitGame" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 500, 640 )
script = ExtResource( 6 )
text = "quit game"
size = 6.0
justify = 2

[node name="Scores" type="Node2D" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 800, 550 )
script = ExtResource( 6 )
text = "scores"
size = 6.0
justify = 2

[node name="Settings" type="Node2D" parent="."]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 800, 640 )
script = ExtResource( 6 )
text = "settings"
size = 6.0
justify = 2
